@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-03-27T08:19:44Z",
-  "count_outdated" : 479,
-  "uniques_outdated" : 255,
+  "timestamp" : "2022-03-28T01:24:28Z",
+  "count_outdated" : 481,
+  "uniques_outdated" : 256,
   "count" : 1159,
   "uniques" : 303,
   "clones" : [
-    {
-      "timestamp": "2022-03-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-03-16T00:00:00Z",
       "count": 553,
