@@ -1,12 +1,7 @@
 {
-  "count": 680,
+  "count": 678,
   "uniques": 31,
   "clones": [
-    {
-      "timestamp": "2022-03-14T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-03-16T00:00:00Z",
       "count": 553,
